Fixing compliance report disabled tabs alignment

--- a/frontend/src/app/css/ComplianceReportTabs.scss
+++ b/frontend/src/app/css/ComplianceReportTabs.scss
@@ -39,7 +39,7 @@
       }
     }
 
-    a {
+    a,span {
       border-bottom: 1rem transparent solid;
       color: $default-text-black;
       display: block;
